# CodeHubot-Fireware

./: .gitignore  README.md
docs/: OTA_IMPLEMENTATION_PLAN.md  OTA_SOLUTION.md  README.md  SERVO_CONTROL_GUIDE.md  WEB_FLASH_SETUP.md  admin-panel.html  ai-control.html  ai-creation.html  coze-plugin-lite.json  firmware-flash.html  index.html  manifest.json.example  quick-start.html  serial-monitor.html  troubleshooting.html
docs/css/: style.css
docs/js/: main.js
firmware/: FIRMWARE_MANUAL.md
firmware/aiot-esp32/: BOARD_SELECTION_GUIDE.md  CAPTIVE_PORTAL.md  CMakeLists.txt  CONFIG_PAGE_DEFAULT_VALUES.md  DEVICE_API_REFERENCE.md  DEVICE_CONFIG.h  Makefile  OTA_GUIDE.md  OTA_INTEGRATION.md  README.md  RELEASE_NOTES_v1.6.md  build_esp_idf.sh  check_hardware.sh  partitions.csv  partitions_4mb.csv  partitions_teaching.csv  rebuild.sh  sdkconfig.defaults
firmware/aiot-esp32/boards/esp32-c3-mini/: board_config.h  bsp_esp32_c3_mini.c  bsp_esp32_c3_mini.h
firmware/aiot-esp32/boards/esp32-p4-function-ev/: board_config.h
firmware/aiot-esp32/boards/esp32-s3-devkit-lite/: board_config.h  bsp_esp32_s3_devkit_lite.c  bsp_esp32_s3_devkit_lite.h
firmware/aiot-esp32/docs/: 传感器动态UI使用指南.md
firmware/aiot-esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  idf_component.yml  main.c
firmware/aiot-esp32/main/bluetooth/: CMakeLists.txt  Kconfig  bt_provision.c  bt_provision.h  bt_provision_ble.c  bt_provision_bsp.c  bt_provision_bsp.h  bt_provision_cmd.c  bt_provision_example.c
firmware/aiot-esp32/main/bsp/: bsp_interface.c  bsp_interface.h
firmware/aiot-esp32/main/button/: button_handler.c  button_handler.h
firmware/aiot-esp32/main/captive_portal/: README.md  captive_portal.c  captive_portal.h
firmware/aiot-esp32/main/device/: device_control.c  device_control.h  device_registration.c  device_registration.h  preset_control.c  preset_control.h  pwm_control.c  pwm_control.h
firmware/aiot-esp32/main/hal/: hal_common.h
firmware/aiot-esp32/main/mqtt/: CMakeLists.txt  Kconfig  aiot_mqtt_client.c  aiot_mqtt_client.h  mqtt_command.h  mqtt_data.h
firmware/aiot-esp32/main/ota/: CMakeLists.txt  Kconfig  ota_manager.c  ota_manager.h  ota_security.c  ota_security.h  ota_version.h
firmware/aiot-esp32/main/provisioning/: provisioning_client.c  provisioning_client.h
firmware/aiot-esp32/main/server/: server_config.c  server_config.h
firmware/aiot-esp32/main/startup/: startup_manager.c  startup_manager.h
firmware/aiot-esp32/main/system/: module_init.c  module_init.h
firmware/aiot-esp32/main/wechat_ble/: CMakeLists.txt  Kconfig  wechat_ble.c  wechat_ble.h  wechat_ble_cmd.c  wechat_ble_cmd.h  wechat_ble_data.c  wechat_ble_data.h  wechat_ble_gatt.c  wechat_ble_gatt.h
firmware/aiot-esp32/main/wifi_config/: wifi_config.c  wifi_config.h
firmware/aiot-esp32/tools/: check_mac_address.py  get_mac.py  read_efuse_mac.sh
firmware/aiot-esp32c3-lite/: .gitignore  BOARD_ADAPTATION.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CMakeLists.txt  DHT11_TEMPERATURE_ISSUE.md  DHT11_TROUBLESHOOTING.md  FINAL_ADAPTATION_SUMMARY.md  FLASH_GUIDE.md  FLASH_NEW_FIRMWARE.sh  HARDWARE_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFLASH_NOW.md  TEMPERATURE_CALIBRATION.md  build.sh  flash_full.sh  merge_firmware.bat  merge_firmware.sh  partitions.csv  sdkconfig.defaults
firmware/aiot-esp32c3-lite/main/: CMakeLists.txt  app_config.h  board_config.h  device_config.c  device_config.h  dht11_driver.c  dht11_driver.h  main.c  ssd1306_oled.c  ssd1306_oled.h
(+26 files in other folders)
